--- a/index.html
+++ b/index.html
@@ -10,9 +10,32 @@
     	<script type="text/javascript" src="js/bootstrap.min.js"></script>
   	</head>
   	<body>
-  		<div id="myname" class="myname">Qingyun Zhang</div>
-  		<div id="CV" class="cv">Curriculum vitae</div>
-  		<div></div>
+      <div class="summary">
+        <div id="myname" class="myname">Qingyun Zhang</div>
+        <div id="CV" class="cv">Curriculum vitae</div>
+        <div class="myinfo">
+          <div class="vertical">
+            <div class="icon">icon here</div>
+            <div class="vinfo">xxx</div>
+          </div>
+        </div>
+      </div>
+      <div class="section">
+        <div class="header">
+          <div class="icon glyphicon glyphicon-lock"></div>
+          <div class="title">titles</div>
+        </div>
+        <div class="body-content">
+          <div class="xtime"></div>
+          <div class="lines"></div>
+          <div class="xcontent">
+            <div class="xname"></div>
+            <div class="xposition"></div>
+            <div class="xinfo"></div>
+          </div>
+        </div>
+      </div>
+  		
 
   	</body>
 </html>
