--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     	<link href="css/moncv.css" rel="stylesheet">
     	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
     	<link rel="stylesheet" type="text/css" href="css/bootstrap-theme.min.css">
+    	<script type="text/javascript" src="js/jquery-3.1.1.min.js"></script>
     	<script type="text/javascript" src="js/bootstrap.min.js"></script>
   	</head>
   	<body>
