--- a/index.html
+++ b/index.html
@@ -1,41 +1,46 @@
 <!DOCTYPE html>
 <html>
-	<head>
-    	<meta charset="utf-8">
-    	<meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
-    	<title>CV</title>
-    	<link href="css/moncv.css" rel="stylesheet">
-    	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
-    	<link rel="stylesheet" type="text/css" href="css/bootstrap-theme.min.css">
-    	<script type="text/javascript" src="js/jquery-3.1.1.min.js"></script>
-    	<script type="text/javascript" src="js/bootstrap.min.js"></script>
-  	</head>
-  	<body>
-      <div class="summary">
-        <div id="myname" class="myname">Qingyun Zhang</div>
-        <div id="CV" class="cv">Curriculum vitae</div>
-        <div class="myinfo">
-          <div class="vertical">
-            <div class="icon">icon here</div>
-            <div class="vinfo">xxx</div>
-          </div>
+    <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
+        <title>Julie's CV</title>
+        <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
+        <link rel="stylesheet" type="text/css" href="css/bootstrap-theme.min.css">
+        <link rel="stylesheet" type="text/css" href="css/font-awesome.min.css">
+        <link href="https://fonts.googleapis.com/css?family=Roboto+Mono" rel="stylesheet">
+        <link href="css/moncv.css" rel="stylesheet">
+        <script type="text/javascript" src="js/jquery-3.1.1.min.js"></script>
+        <script type="text/javascript" src="js/bootstrap.min.js"></script>
+    </head>
+    <body>
+        <div class="resume">
+            <div class="summary">
+                <div class="title">
+                    <div class="name">Qingyun Zhang</div>
+                    <div class="cv">Curriculum vitae</div>
+                </div>
+                <div class="info">
+                    <div class="item">
+                        <div class="icon"></div>
+                        <div class="detial">Sep. 10, 1990</div>
+                    </div>
+                </div>
+            </div>
+            <div class="section">
+                <div class="header">
+                    <div class="icon glyphicon glyphicon-lock"></div>
+                    <div class="title">titles</div>
+                </div>
+                <div class="body-content">
+                    <div class="xtime"></div>
+                    <div class="lines"></div>
+                    <div class="xcontent">
+                        <div class="xname"></div>
+                        <div class="xposition"></div>
+                        <div class="xinfo"></div>
+                    </div>
+                </div>
+            </div>
         </div>
-      </div>
-      <div class="section">
-        <div class="header">
-          <div class="icon glyphicon glyphicon-lock"></div>
-          <div class="title">titles</div>
-        </div>
-        <div class="body-content">
-          <div class="xtime"></div>
-          <div class="lines"></div>
-          <div class="xcontent">
-            <div class="xname"></div>
-            <div class="xposition"></div>
-            <div class="xinfo"></div>
-          </div>
-        </div>
-      </div>
-  	</body>
+    </body>
 </html>
-
