--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     	<meta charset="utf-8">
     	<meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
     	<title>CV</title>
-    	<link href="css/moncv.css" rel="stylesheet">
     	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
     	<link rel="stylesheet" type="text/css" href="css/bootstrap-theme.min.css">
+      <link href="css/moncv.css" rel="stylesheet">
     	<script type="text/javascript" src="js/jquery-3.1.1.min.js"></script>
     	<script type="text/javascript" src="js/bootstrap.min.js"></script>
   	</head>
@@ -14,25 +14,58 @@
       <div class="summary">
         <div id="myname" class="myname">Qingyun Zhang</div>
         <div id="CV" class="cv">Curriculum vitae</div>
-        <div class="myinfo">
-          <div class="vertical">
-            <div class="icon">icon here</div>
-            <div class="vinfo">xxx</div>
+        <div class="myinfo row">
+          <div class="vertical col-md-4 col-xs-6">
+            <div class="v-line1">
+              <span class="icons glyphicon glyphicon-earphone"></span>
+              <span class="vinfo">xxx</span>
+            </div>
+            <div class="v-line1">
+              <span class="icons glyphicon glyphicon-earphone"></span>
+              <span class="vinfo">xxx</span>
+            </div>
+            <div class="v-line1">
+              <span class="icons glyphicon glyphicon-earphone"></span>
+              <span class="vinfo">xxx</span>
+            </div>
+          </div>
+          <div class="vertical col-md-4 col-xs-6">
+            <div class="v-line1">
+              <span class="icons glyphicon glyphicon-earphone"></span>
+              <span class="vinfo">xxx</span>
+            </div>
+            <div class="v-line1">
+              <span class="icons glyphicon glyphicon-earphone"></span>
+              <span class="vinfo">xxx</span>
+            </div>
+            <div class="v-line1">
+              <span class="icons glyphicon glyphicon-earphone"></span>
+              <span class="vinfo">xxx</span>
+            </div>
+          </div>
+          <div class="vertical col-md-4 col-xs-12">
+            <img src="https://0.s3.envato.com/files/104140228/themeelite-logo.png">
           </div>
         </div>
       </div>
       <div class="section">
         <div class="header">
-          <div class="icon glyphicon glyphicon-lock"></div>
-          <div class="title">titles</div>
+          <span class="icon glyphicon glyphicon-lock"></span>
+          <span class="title">titles</span>
         </div>
-        <div class="body-content">
-          <div class="xtime"></div>
-          <div class="lines"></div>
-          <div class="xcontent">
-            <div class="xname"></div>
-            <div class="xposition"></div>
-            <div class="xinfo"></div>
+        <div class="body-content row">
+          <div class="xtime col-md-2">
+            <div class="start">06/2015</div>
+            <div calss="end">11/2015</div>
+          </div>
+          <div class="lines col-md-1">
+            <div class="glyphicon glyphicon-asterisk"></div>
+            <div class="line"></div>
+          </div>
+          <div class="xcontent col-md-9">
+            <div class="xname">front-end developer</div>
+            <div class="xposition">xxxxxxx|xxxxx</div>
+            <div class="xinfo"><p>For performance reasons, all icons require a base class and individual icon class. To use, place the following code just about anywhere. Be sure to leave a space between the icon and text for proper padding.</p></div>
           </div>
         </div>
       </div>
