--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <title>Julie's CV</title>
         <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
         <link rel="stylesheet" type="text/css" href="css/bootstrap-theme.min.css">
-        <link rel="stylesheet" type="text/css" href="css/font-awesome.min.css">
+        <link rel="stylesheet" type="text/css" href="font-awesome/css/font-awesome.min.css">
         <link href="https://fonts.googleapis.com/css?family=Roboto+Mono" rel="stylesheet">
         <link href="css/moncv.css" rel="stylesheet">
         <script type="text/javascript" src="js/jquery-3.1.1.min.js"></script>
@@ -21,15 +21,14 @@
                 </div>
                 <div class="info">
                     <div class="item">
-                        <div class="icon"></div>
                         <div class="detial">Sep. 10, 1990</div>
                     </div>
                 </div>
             </div>
             <div class="section">
                 <div class="header">
-                    <div class="icon glyphicon glyphicon-lock"></div>
-                    <div class="title">titles</div>
+                    <i class="fa fa-briefcase" aria-hidden="true"></i>
+                    <div class="title">Work experience</div>
                 </div>
                 <div class="body-content">
                     <div class="xtime"></div>
