--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                                 <i class="dotted" aria-hidden="true"></i>
                             </div>
                             <div class="xcontent col-sm-9 col-xs-12">
-                                <div class="xname">{{work.company}}</div>
+                                <div class="company">{{work.company}}</div>
                                 <div class="xposition">{{work.position}}</div>
                                 <div class="xinfo"><p>{{work.responsebility}}</p></div>
                             </div>
