change face picture

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <div class="cv">Curriculum vitae</div>
                 <div class="myinfo row">
                     <div class="vertical photo col-xs-12 col-sm-12 col-md-push-8 col-md-4">
-                        <img src="https://0.s3.envato.com/files/104140228/themeelite-logo.png">
+                        <img src="imgs/face.jpg">
                     </div>
                     <div class="vertical col-xs-12 col-sm-6 col-md-pull-4 col-md-4">
                         <div class="v-line1">
