--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
                             </div>
                             <div class="xcontent col-sm-9 col-xs-12">
                                 <div class="company">{{work.company}}</div>
-                                <div class="xposition">{{work.position}}</div>
-                                <div class="xinfo"><p>{{work.responsebility}}</p></div>
+                                <div class="xposition">{{work.xposition}}</div>
+                                <div class="xinfo"><p>{{work.responsibility}}</p></div>
                             </div>
                         </div>
                     </div>
@@ -89,9 +89,9 @@
                                 <i class="dotted" aria-hidden="true"></i>
                             </div>
                             <div class="xcontent col-sm-9 col-xs-12">
-                                <div class="company">{{education.company}}</div>
-                                <div class="xposition">{{education.position}}</div>
-                                <div class="xinfo"><p>{{education.responsebility}}</p></div>
+                                <div class="company">{{education.university}}</div>
+                                <div class="xposition">{{education.diploma}}&nbsp;&nbsp;&nbsp;&nbsp;{{education.major}}</div>
+                                <div class="xinfo"><p>{{education.majorcourse}}</p></div>
                             </div>
                         </div>
                     </div>
