final one, english and french

--- a/covter.html
+++ b/covter.html
@@ -10,12 +10,75 @@
         <link href="css/covter.css" rel="stylesheet">
     </head>
     <body>
-        <div class="resume">
+        <div id="cover-letter" class="resume">
             <div class="summary">
-                <div class="name">Qingyun Zhang</div>
-                <div class="cv">Curriculum vitae</div>
+                <div class="header row">
+                    <div class="col-xs-6">
+                        <div class="name">Qingyun Zhang</div>
+                    </div>
+                </div>
+                <div class="myinfo row">
+                    <div class="vertical photo col-xs-12 col-sm-12 col-md-push-8 col-md-4">
+                        <img src="imgs/face.jpg">
+                    </div>
+                    <div class="vertical col-xs-12 col-sm-6 col-md-pull-4 col-md-4">
+                        <div class="v-line1">
+                            <i class="fa fa-fw fa-birthday-cake" aria-hidden="true"></i>
+                            <span class="vinfo">Sep. 10 1990</span>
+                        </div>
+                        <div class="v-line1">
+                            <i class="fa fa-fw fa-phone" aria-hidden="true"></i>
+                            <span class="vinfo"><a href="tel:4389270910">(438) 927 0910</a></span>
+                        </div>
+                        <div class="v-line1">
+                            <i class="fa fa-fw fa-globe" aria-hidden="true"></i>
+                            <span class="vinfo"><a href="http://julia.moe" target="_blank">julia.moe</a></span>
+                        </div>
+                    </div>
+                    <div class="vertical col-xs-12 col-sm-6 col-md-pull-4 col-md-4">
+                        <div class="v-line1">
+                            <i class="fa fa-fw fa-envelope" aria-hidden="true"></i>
+                            <span class="vinfo"><a href="mailto:julie@julia.moe" target="_blank">julie@julia.moe</a></span>
+                        </div>
+                        <div class="v-line1">
+                            <i class="fa fa-fw fa-linkedin" aria-hidden="true"></i>
+                            <span class="vinfo"><a href="https://ca.linkedin.com/in/qingyun-zhang-416a61126" target="_blank">qingyun zhang</a></span>
+                        </div>
+                        <div class="v-line1">
+                            <i class="fa fa-fw fa-facebook" aria-hidden="true"></i>
+                            <span class="vinfo"><a href="https://www.facebook.com/zhang.qingyun.7" target="_blank">zhang.qingyun.7</a></span>
+                        </div>
+                    </div>
+                </div>
             </div>
             <div class="break-line"></div>
+            <div class="manager">Dear HR Manager</div>
+            <div class="like raw">
+                <div class="col-sm-1 col-xs-12 logo1"><i class="fa fa-graduation-cap fa-lg" aria-hidden="true"></i></div>
+                <div class="col-sm-9 col-xs-12 con1">
+                    <p>This letter is to express my interest in your posting on your website for an experienced, detailed-oriented, front end web developer. With 1 year of hands-on experience efficiently coding web sites and applications using modern HTML, CSS, and JavaScript, I am confident I will be an excellent addition to your organization.</p>
+                </div>
+            </div>
+            <div class="introme raw">
+                <div class="col-sm-1 col-xs-12 logo1"><i class="fa fa-gitlab fa-lg" aria-hidden="true"></i></div>
+                <div class="col-sm-9 col-xs-12 con1">
+                    <p>I have a bachelor’s degree in computer science and also have communication skills, proficiency in English, primary and fast learning in French. Building state-of-the-art, easy to use, user friendly web sites and applications is truly a passion of mine. I actively seek out new technologies.</p>
+                </div>
+            </div> 
+            <div class="attach raw">
+                <div class="col-sm-1 col-xs-12 logo1"><i class="fa fa-link fa-lg" aria-hidden="true"></i></div>
+                <div class="col-sm-9 col-xs-12 con1">
+                    <p>I’ve attached a copy of my resume that details my experience, along with links to the various web sites and applications I’ve had the honor of working on.</p>
+                </div>
+            </div>
+            <div class="nomalfini raw">
+                <div class="col-sm-1 col-xs-12 logo1"><i class="fa fa-twitch fa-lg" aria-hidden="true"></i></div>
+                <div class="col-sm-9 col-xs-12 con1">
+                    <p>I can be reached anytime at morning via my cell phone, <b>438-927-0910</b> or via email at <b>julie@lemontv.me</b>. Thank you for your time and consideration. I look forward to speaking with you about this opportunity.</p>
+                </div>
+            </div>
+            <div class="foot">Best Regards</div>
+            <div class="foot nameme">Qingyun Zhang</div>
         </div>
     </body>
 </html>
