--- a/covter.html
+++ b/covter.html
@@ -12,13 +12,11 @@
     <body>
         <div id="cover-letter" class="resume">
             <div class="summary">
-                <div class="header row">
-                    <div class="col-xs-6">
+                <div class="myinfo row">
+                    <div class="header col-xs-6 col-sm-12">
                         <div class="name">Qingyun Zhang</div>
                     </div>
-                </div>
-                <div class="myinfo row">
-                    <div class="vertical photo col-xs-12 col-sm-12 col-md-push-8 col-md-4">
+                    <div class="vertical photo col-xs-6 col-sm-12 col-md-push-8 col-md-4">
                         <img src="imgs/face.jpg">
                     </div>
                     <div class="vertical col-xs-12 col-sm-6 col-md-pull-4 col-md-4">
@@ -64,7 +62,7 @@
                 <div class="col-sm-9 col-xs-12 con1">
                     <p>I have a bachelor’s degree in computer science and also have communication skills, proficiency in English, primary and fast learning in French. Building state-of-the-art, easy to use, user friendly web sites and applications is truly a passion of mine. I actively seek out new technologies.</p>
                 </div>
-            </div> 
+            </div>
             <div class="attach raw">
                 <div class="col-sm-1 col-xs-12 logo1"><i class="fa fa-link fa-lg" aria-hidden="true"></i></div>
                 <div class="col-sm-9 col-xs-12 con1">
